--- a/Dronection/Android/WiFi/Android_WifiDirect_Intro/Android_WifiDirect_Intro/Android_WifiDirect_Intro.csproj
+++ b/Dronection/Android/WiFi/Android_WifiDirect_Intro/Android_WifiDirect_Intro/Android_WifiDirect_Intro.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteConverter.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="PeerItem.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
