Add socket connection

--- a/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Android_Wifi_Test.csproj
+++ b/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Android_Wifi_Test.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTransferActivity.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,6 +59,9 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\wifi_dialog.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\DataTransfer.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
