--- a/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Properties/AndroidManifest.xml
+++ b/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Properties/AndroidManifest.xml
@@ -4,5 +4,6 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="Android_Wifi_Test"></application>
 </manifest>
