Update Socket connection

--- a/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Android_Wifi_Test.csproj
+++ b/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Android_Wifi_Test.csproj
@@ -53,6 +53,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketThread.cs" />
     <Compile Include="WifiEntry.cs" />
   </ItemGroup>
   <ItemGroup>
