--- a/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Properties/AndroidManifest.xml
+++ b/Dronection/Android/WiFi/Android_Wifi_Test/Android_Wifi_Test/Properties/AndroidManifest.xml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Android_Wifi_Test.Android_Wifi_Test" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Android_Wifi_Test.Android_Wifi_Test" android:versionCode="1" android:versionName="1.0" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="21" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.NFC" />
 	<application android:label="Android_Wifi_Test"></application>
 </manifest>
