--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Properties/AndroidManifest.xml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Properties/AndroidManifest.xml
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="WiFiDronection.WiFiDronection" android:versionCode="1" android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="16" />
-  <application android:label="WiFiDronection"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="WiFiDronection.WiFiDronection" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="16" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.NFC" />
+	<application android:label="WiFiDronection"></application>
 </manifest>
