--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
@@ -61,6 +61,7 @@
     <Compile Include="SocketConnection.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\OpenSans-Light.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\WifiDialog.axml">
