--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
@@ -54,21 +54,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ByteConverter.cs" />
-    <Compile Include="CallReciver.cs" />
-    <Compile Include="ConnectedDevice.cs" />
     <Compile Include="ConnectedThread.cs" />
     <Compile Include="ControllerActivity.cs" />
     <Compile Include="ControllerSettings.cs" />
     <Compile Include="ControllerView.cs" />
     <Compile Include="DataTransfer.cs" />
-    <Compile Include="IEstablishConnection.cs" />
+    <Compile Include="HelpActivity.cs" />
     <Compile Include="Joystick.cs" />
+    <Compile Include="ListAdapter.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="MyBroadcastreciver.cs" />
     <Compile Include="PairedDevices.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchDevices.cs" />
     <Compile Include="Sender.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -79,12 +76,20 @@
     <AndroidAsset Include="Assets\OpenSans-Light.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
-    <AndroidResource Include="Resources\layout\Main.axml" />
-    <AndroidResource Include="Resources\layout\PairedLayout.axml" />
-    <AndroidResource Include="Resources\layout\SearchedLayout.axml" />
-    <AndroidResource Include="Resources\layout\ConnectedDevicesLayout.axml" />
+    <AndroidResource Include="Resources\layout\Main.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\PairedLayout.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\layout\ControllerLayout.axml" />
     <AndroidResource Include="Resources\layout\ControllerSettings.axml" />
+    <AndroidResource Include="Resources\layout\CostumListItemLayout.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\Help.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
@@ -100,6 +105,15 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ifx_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\mode1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\mode2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bg.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
