Add Log Activity to wifi app

--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ControllerView.cs" />
     <Compile Include="HelpActivity.cs" />
     <Compile Include="Joystick.cs" />
+    <Compile Include="LogActivity.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Peer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -83,6 +84,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\WifiDialogTitle.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\Log.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
