--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
@@ -59,6 +59,8 @@
     <Compile Include="ControllerActivity.cs" />
     <Compile Include="ControllerSettings.cs" />
     <Compile Include="ControllerView.cs" />
+    <Compile Include="CurrentVisualisatonData.cs" />
+    <Compile Include="DataPoint.cs" />
     <Compile Include="HelpActivity.cs" />
     <Compile Include="Joystick.cs" />
     <Compile Include="ListAdapter.cs" />
@@ -68,8 +70,10 @@
     <Compile Include="RawDataActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowVisualitionDataActivity.cs" />
     <Compile Include="SocketConnection.cs" />
     <Compile Include="SocketReader.cs" />
+    <Compile Include="VisualisationActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\OpenSans-Light.ttf" />
@@ -100,6 +104,12 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\RawDataLayout.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\VisualisationLayout.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\ShowVisualisationDataLayout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
