--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
@@ -59,7 +59,7 @@
     <Compile Include="ControllerActivity.cs" />
     <Compile Include="ControllerSettings.cs" />
     <Compile Include="ControllerView.cs" />
-    <Compile Include="CurrentVisualisatonData.cs" />
+    <Compile Include="CurrentVisualizationData.cs" />
     <Compile Include="DataPoint.cs" />
     <Compile Include="HelpActivity.cs" />
     <Compile Include="Joystick.cs" />
@@ -69,10 +69,10 @@
     <Compile Include="RawDataActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShowVisualitionDataActivity.cs" />
+    <Compile Include="ShowVisualizationDataActivity.cs" />
     <Compile Include="SocketConnection.cs" />
     <Compile Include="SocketReader.cs" />
-    <Compile Include="VisualisationActivity.cs" />
+    <Compile Include="VisualizationActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\OpenSans-Light.ttf" />
@@ -105,10 +105,10 @@
     <AndroidResource Include="Resources\layout\RawDataLayout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\VisualisationLayout.axml">
+    <AndroidResource Include="Resources\layout\VisualizationLayout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\ShowVisualisationDataLayout.axml">
+    <AndroidResource Include="Resources\layout\ShowVisualizationDataLayout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\drawable\icon.png" />
@@ -125,7 +125,7 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\MySeekBar.xml" />
+    <AndroidResource Include="Resources\drawable\CustomSeekBar.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ifx_logo.png" />
