Add license headers

--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/WiFiDronection.csproj
@@ -111,6 +111,7 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\drawable\icon.png" />
+    <None Include="WiFiDronection.licenseheader" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
