--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
@@ -59,6 +59,8 @@
     <Compile Include="ControllerActivity.cs" />
     <Compile Include="ControllerSettings.cs" />
     <Compile Include="ControllerView.cs" />
+    <Compile Include="CurrentVisualizationData.cs" />
+    <Compile Include="DataPoint.cs" />
     <Compile Include="HelpActivity.cs" />
     <Compile Include="Joystick.cs" />
     <Compile Include="ListAdapter.cs" />
@@ -68,8 +70,10 @@
     <Compile Include="RawDataActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowVisualizationDataActivity.cs" />
     <Compile Include="SocketConnection.cs" />
     <Compile Include="SocketReader.cs" />
+    <Compile Include="VisualizationActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\SourceSansPro-Bold.ttf" />
@@ -96,6 +100,12 @@
     </AndroidResource>
     <AndroidResource Include="Resources\layout\Log.axml" />
     <AndroidResource Include="Resources\layout\RawDataLayout.axml" />
+    <AndroidResource Include="Resources\layout\VisualizationLayout.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\ShowVisualizationDataActivity.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
