--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
@@ -106,18 +106,17 @@
     <AndroidResource Include="Resources\layout\ShowVisualizationDataActivity.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\icon.png" />
+    <AndroidResource Include="Resources\drawable\bg.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\Icon.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\MySeekBar.xml" />
+    <AndroidResource Include="Resources\drawable\CustomSeekBar.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ifx_logo.png" />
@@ -127,9 +126,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\mode2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\bg.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ifx_logo_small.png" />
