--- a/Analyzer/Datalyze/Datalyze/Properties/AndroidManifest.xml
+++ b/Analyzer/Datalyze/Datalyze/Properties/AndroidManifest.xml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.sguertl.datalyze">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.sguertl.datalyze" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="16" />
-	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
-	</application>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<application android:allowBackup="true" android:label="Datalyze" android:theme="@android:style/Theme.Holo.Light" android:icon="@drawable/icon"></application>
 </manifest>
