--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <ReleaseVersion>1.1.2</ReleaseVersion>
     <SynchReleaseVersion>false</SynchReleaseVersion>
@@ -63,7 +63,6 @@
     <Compile Include="ControllerView.cs" />
     <Compile Include="CurrentVisualizationData.cs" />
     <Compile Include="DataPoint.cs" />
-    <Compile Include="Flight.cs" />
     <Compile Include="HelpActivity.cs" />
     <Compile Include="Joystick.cs" />
     <Compile Include="ListAdapter.cs" />
@@ -75,8 +74,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShowVisualizationDataActivity.cs" />
     <Compile Include="SocketConnection.cs" />
-    <Compile Include="SocketReader.cs" />
     <Compile Include="VisualizationActivity.cs" />
+    <Compile Include="SocketWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\SourceSansPro-Bold.ttf" />
