Final BTDronection v1.0 + APK

--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/BTDronection.csproj
@@ -121,7 +121,7 @@
     <AndroidResource Include="Resources\drawable\CustomSeekBar.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ifx_logo.png" />
+    <AndroidResource Include="Resources\drawable\ifxlogo.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\mode1.png" />
